2007-10-25  Daniel Jacobowitz  <dan@codesourcery.com>

	* elf.c (assign_file_positions_for_load_sections): Trust
	p_align_valid.
	(copy_elf_program_header): Copy PT_NULL segments.

2007-09-14  Alan Modra  <amodra@bigpond.net.au>

	* opncls.c (find_separate_debug_file): Ensure bfd_set_error has
	been called on all error return paths.
	(bfd_fill_in_gnu_debuglink_section): Use bfd_malloc, not malloc.
	Clear padding after filename

2007-09-14  Alan Modra  <amodra@bigpond.net.au>

	* format.c (bfd_check_format_matches): Record matching targets even
	when "matching" is NULL to allow bfd_associated_vector matches.
	Consolidate error return code.  Consolidate ok return code.  Always
	restore original target and format on error.

2007-08-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.am (RELEASE): Unset.
	* Makefile.in: Regenerated.

2007-08-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* configure.in (VERSION): Update.
	* Makefile.am (RELEASE): Set.
	* configure, Makefile.in: Regenerated.

2007-08-28  David Heine  <dlheine@tensilica.com>

	* elf32-xtensa.c (compute_ebb_actions): Update removed_bytes when
	narrowing instructions.

2007-08-28  Robert Sebastian Gerus  <arachnist@gmail.com>

	* config.bfd: Add support for i[3-7]86-*-dragonfly*.
	* configure.in: Likewise.
	* configure: Regenerate.

2007-08-25  Ulrich Weigand  <uweigand@de.ibm.com>
	    Alan Modra  <amodra@bigpond.net.au>

	* elf.c (elfcore_grok_spu_note): New function.
	(elfcore_read_notes): Call it.

2007-08-20  Richard Sandiford  <richard@codesourcery.com>

	* elfxx-mips.c (mips_elf_link_hash_table): Add computed_got_sizes.
	(mips_elf_record_global_got_symbol): Increment local_gotno for
	each forced-local symbol.
	(_bfd_mips_elf_check_relocs): Pass forced-local call symbols to
	mips_elf_record_global_got_symbol for VxWorks too.
	(_bfd_mips_elf_always_size_sections): Set computed_got_sizes
	to true after computing the GOT size.
	(_bfd_mips_elf_hide_symbol): Increase local_gotno whenever